# proof-of-reserves

./: .dockerignore  .env.example  .gitignore  AGENT_GUIDE.md  CLAUDE.md  Dockerfile  docker-compose.yml
app/web/: Dockerfile  README.md  index.html  mock-registry.mjs  package-lock.json  package.json  por-mcp.mjs  prover-web.mjs  register-agent.mjs  sepolia-registry.mjs  server.mjs  submitter.mjs  sync-docs.mjs  synthtest.mjs  vite.config.ts
app/web/public/: AGENT_GUIDE.md  openapi.json
app/web/src/: App.tsx  api.ts  chain.ts  components.tsx  hooks.ts  main.tsx  markdown.ts  theme.css
app/web/src/pages/: AgentDetail.tsx  Directory.tsx  Docs.tsx  ProveReserves.tsx
deploy/: lib.sh  publish-production.sh
deploy/prove-web/: Dockerfile  build.sh
deploy/prover/: Dockerfile  README.md  build.sh  entrypoint.sh  gpu_preflight.c
deploy/railway/: Dockerfile.risc0  Dockerfile.runtime  README.md  adapter.json  build-and-push.sh  notary.json  submitter.json  ui.json  verifier.json
deploy/railway/notary/: Dockerfile  railway.json
deploy/railway/prove-web/: Dockerfile  railway.json
deploy/railway/verifier/: Dockerfile  railway.json
por-risc0/: Cargo.toml  cudacheck  cudacheck.c  cudacheck_dl  cudacheck_dl.c  proof.json  proof.json.bak
por-risc0/.cargo/: config.toml
por-risc0/host/: Cargo.toml
por-risc0/host/src/: attest.rs  lib.rs  main.rs  openapi.json  verify.rs
por-risc0/methods/: Cargo.toml  build.rs
por-risc0/methods/guest/: Cargo.toml
por-risc0/methods/guest/src/: main.rs
por-risc0/por-types/: Cargo.toml
por-risc0/por-types/src/: chains.rs  lib.rs
por-zk/: Cargo.toml  POR_SERVICE.md  por_core.rs  por_gatecheck.rs  por_prove.rs  por_service.rs  por_sigvec.rs  por_verifier.rs  por_witness.rs  por_witnesstest.rs  por_zk.rs  siwe_selftest.rs  siwe_verify.rs  zerion_notary.rs  zk_selftest.rs
por-zk/noir/: Nargo.toml  Prover.toml
por-zk/noir/src/: main.nr
por-zk/noir/src/verifiers/: account.nr  header.nr
