[package]
edition = "2024"
name = "por-zk"
publish = false
version = "0.1.0"

# Standalone (its own lockfile + workspace) because `noir-rs` pulls the
# noir-lang monorepo via git (~1 GB) and a heavy Barretenberg build.
[workspace]

[dependencies]
tlsn = { git = "https://github.com/tlsnotary/tlsn", rev = "0fe3c32d35382b3f290a43c4156399ca4512bb89", features = ["mozilla-certs"] }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", rev = "0fe3c32d35382b3f290a43c4156399ca4512bb89" }
tls-server-fixture = { git = "https://github.com/tlsnotary/tlsn", rev = "0fe3c32d35382b3f290a43c4156399ca4512bb89" }
tlsn-server-fixture = { git = "https://github.com/tlsnotary/tlsn", rev = "0fe3c32d35382b3f290a43c4156399ca4512bb89" }
tlsn-server-fixture-certs = { git = "https://github.com/tlsnotary/tlsn", rev = "0fe3c32d35382b3f290a43c4156399ca4512bb89" }
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "64722f7" }

anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
bincode = "1.3"
chrono = "0.4"
futures = "0.3"
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
k256 = { version = "0.13", features = ["ecdsa"] }
noir = { git = "https://github.com/zkmopro/noir-rs", tag = "v1.0.0-beta.19", features = [
  "barretenberg",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1.38", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"

# The separate notary, the agent CLI, the relying-party REST verifier, the
# SIWE-gated proving service, and two no-network self-tests. (The reveal-balance
# flow that used to live in the sibling `por/` crate was dropped.)
[[bin]]
name = "zerion_notary"
path = "zerion_notary.rs"

[[bin]]
name = "por_prove"
path = "por_prove.rs"

[[bin]]
name = "por_verifier"
path = "por_verifier.rs"

[[bin]]
name = "por_service"
path = "por_service.rs"

[[bin]]
name = "zk_selftest"
path = "zk_selftest.rs"

[[bin]]
name = "siwe_selftest"
path = "siwe_selftest.rs"

# TEMPORARY Phase-0.2 measurement harness (remove after de-risk).
[[bin]]
name = "por_gatecheck"
path = "por_gatecheck.rs"

# TEMPORARY: EIP-191 ownership test-vector generator (remove after de-risk).
[[bin]]
name = "por_sigvec"
path = "por_sigvec.rs"

# TEMPORARY: witness-builder roundtrip test (remove after de-risk).
[[bin]]
name = "por_witnesstest"
path = "por_witnesstest.rs"
