[package]
edition = "2024"
name = "por-zk"
publish = false
version = "0.1.0"

# Standalone (its own lockfile + workspace). Trimmed to the TLSNotary-reference
# pieces; the heavy noir-rs/Barretenberg dependency was removed when the ZK layer
# moved to ../por-risc0 (Risc0). Now builds fast (no Barretenberg).
[workspace]

[dependencies]
tlsn = { git = "https://github.com/tlsnotary/tlsn", rev = "0fe3c32d35382b3f290a43c4156399ca4512bb89", features = ["mozilla-certs"] }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", rev = "0fe3c32d35382b3f290a43c4156399ca4512bb89" }
tls-server-fixture = { git = "https://github.com/tlsnotary/tlsn", rev = "0fe3c32d35382b3f290a43c4156399ca4512bb89" }
tlsn-server-fixture = { git = "https://github.com/tlsnotary/tlsn", rev = "0fe3c32d35382b3f290a43c4156399ca4512bb89" }
tlsn-server-fixture-certs = { git = "https://github.com/tlsnotary/tlsn", rev = "0fe3c32d35382b3f290a43c4156399ca4512bb89" }
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "64722f7" }

anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
bincode = "1.3"
chrono = "0.4"
futures = "0.3"
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
k256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1.38", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"

# Trimmed to the TLSNotary-reference pieces that build WITHOUT noir-rs/Barretenberg:
# the separate notary + the SIWE EIP-191 self-test. The Noir/UltraHonk ZK layer moved
# to ../por-risc0, so its prover bins (por_prove/por_verifier/por_service/zk_selftest)
# were dropped; the prover-side SOURCE — por_core.rs / por_witness.rs / por_zk.rs /
# por_prove.rs / por_verifier.rs / por_service.rs — is KEPT as TLSNotary reference but
# is no longer built (no [[bin]] entry, so cargo ignores it).
[[bin]]
name = "zerion_notary"
path = "zerion_notary.rs"

[[bin]]
name = "siwe_selftest"
path = "siwe_selftest.rs"
