[package]
name = "host"
version = "0.1.0"
edition = "2021"

# GPU proving: `cargo run --release --features cuda --bin host` (needs the CUDA
# toolkit + matching NVIDIA driver on the host). Default build stays CPU-only.
[features]
cuda = ["risc0-zkvm/cuda"]

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
ciborium = "0.2.2"
hex = "0.4.3"
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# ownership_selftest: build synthetic-but-valid state + sign on the host (unpatched
# crates; the risc0 precompile forks are guest-only).
alloy-primitives = "0.8"
alloy-trie = { version = "0.7", features = ["ethereum"] }
alloy-rlp = "0.3"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
