[package]
name = "host"
version = "0.1.0"
edition = "2021"

# The prover binary lives at src/main.rs but is named `prover` (the package/lib stays
# `host` so the bins can `use host::{attest, verify}`).
[[bin]]
name = "prover"
path = "src/main.rs"

# GPU proving: `cargo run --release --features cuda --bin prover` (needs the CUDA
# toolkit + matching NVIDIA driver on the host). Default build stays CPU-only.
[features]
cuda = ["risc0-zkvm/cuda"]

[dependencies]
methods = { path = "../methods" }
por-types = { path = "../por-types" }
risc0-zkvm = { version = "^3.0.4" }
rand = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
ciborium = "0.2.2"
hex = "0.4.3"
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# ownership_selftest: build synthetic-but-valid state + sign on the host (unpatched
# crates; the risc0 precompile forks are guest-only).
alloy-primitives = "0.8"
alloy-trie = { version = "0.7", features = ["ethereum"] }
alloy-rlp = "0.3"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }

# TLSNotary attestation: the host (agent) MPC-TLS-attests debug_getRawHeader(N) to
# drpc via the notary; por_verify verifies the presentation. Pinned to por-zk's
# exact tlsn rev so the alpha API matches.
tlsn = { git = "https://github.com/tlsnotary/tlsn", rev = "0fe3c32d35382b3f290a43c4156399ca4512bb89", features = ["mozilla-certs"] }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", rev = "0fe3c32d35382b3f290a43c4156399ca4512bb89" }
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "64722f7" }
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros", "net", "io-std", "io-util", "time"] }
tokio-util = "0.7"
futures = "0.3"
hyper = { version = "1.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bincode = "1.3"
base64 = "0.22"
anyhow = "1.0"
tracing = "0.1"
